[gd_scene load_steps=7 format=3 uid="uid://my8gbw8v4brm"]

[ext_resource type="Script" path="res://Entities/Debris/basic_debris.gd" id="1_l5rvv"]
[ext_resource type="Script" path="res://Resources/Explosion.gd" id="2_r86dk"]
[ext_resource type="Texture2D" uid="uid://cjckyw74v6px3" path="res://icon.svg" id="3_rqw7v"]

[sub_resource type="Resource" id="Resource_u2duo"]
script = ExtResource("2_r86dk")
radius = 16.0
time = 0.3

[sub_resource type="CircleShape2D" id="CircleShape2D_u0ic4"]
radius = 13.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ndcka"]
size = Vector2(38, 40)

[node name="BasicDebris" type="CharacterBody2D" groups=["debris"]]
collision_layer = 3
collision_mask = 3
motion_mode = 1
script = ExtResource("1_l5rvv")
death_effects = Array[Resource("res://Resources/Effect.gd")]([SubResource("Resource_u2duo")])

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.185, 0.185)
texture = ExtResource("3_rqw7v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_u0ic4")
debug_color = Color(0.666667, 0.509804, 0.129412, 0.419608)

[node name="RailFieldArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="RailFieldArea"]
shape = SubResource("RectangleShape2D_ndcka")

[connection signal="area_entered" from="RailFieldArea" to="." method="_on_rail_field_area_area_entered"]
[connection signal="area_exited" from="RailFieldArea" to="." method="_on_rail_field_area_area_exited"]
